# AI

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  plan.docs  plan.md  replan.md  requirement.txt  step.md
ai/: README.md
ai/docs/assets/: garment-asset-spec.md
ai/docs/benchmarks/: README.md  reconstruction-benchmark-template.md
ai/docs/data/: artifact-lifecycle.md
ai/docs/datasets/: README.md  input-benchmark-spec.md  input-labeling-guide.md  review-checklist.md
ai/scripts/blender/: README.md
ai/workers/gpu-worker/: README.md  pyproject.toml
ai/workers/gpu-worker/app/: __init__.py  cli.py  config.py  models.py
ai/workers/gpu-worker/app/pipelines/: __init__.py  reconstruction.py
ai/workers/gpu-worker/app/providers/: __init__.py  base.py  mock.py  sam3d.py
ai/workers/gpu-worker/app/tasks/: __init__.py
ai/workers/gpu-worker/app/utils/: __init__.py  files.py  images.py
ai/workers/gpu-worker/tests/: __init__.py  test_reconstruction_smoke.py
assets/garments/: README.md
assets/hdri/: README.md
backend/: README.md
backend/api/: .env.example  README.md  pyproject.toml
backend/api/app/: main.py
backend/api/app/api/: router.py
backend/api/app/api/v1/: health.py
backend/api/app/core/: config.py
backend/docs/: README.md  mongo-schema.md  object-storage-spec.md
frontend/: README.md
frontend/docs/: README.md
frontend/web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
infra/docker/: docker-compose.local.yml
infra/monitoring/: README.md
infra/nginx/: README.md
(+18 files in other folders)
